# agent-workflow-platform

./: .env.example  README.md  docker-compose.yml
backend/: README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agent/: __init__.py  fake_provider.py  schemas.py
backend/app/api/: router.py
backend/app/api/routes/: dashboard.py  tasks.py
backend/app/core/: config.py  errors.py
backend/app/db/: session.py
backend/app/llm/: __init__.py  base.py  fake_provider.py  openai_provider.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 0001_create_task_tables.py  0002_create_workflow_runs.py  0003_create_tool_calls.py  0004_create_workflow_checkpoints.py
backend/app/models/: __init__.py  task.py  tool_call.py  workflow_checkpoint.py  workflow_run.py
backend/app/prompts/: __init__.py  registry.py
backend/app/schemas/: task.py
backend/app/services/: workflow_recovery_service.py  workflow_service.py
backend/app/tools/: __init__.py  base.py  defaults.py  registry.py  schemas.py
backend/app/tools/builtins/: calculator.py  file_reader.py
backend/app/workflow/: graph.py  retry.py  tool_executor.py
backend/tests/: conftest.py
backend/tests/integration/: test_dashboard_api.py  test_health_api.py  test_tasks_api.py  test_workflow_api.py
backend/tests/unit/: test_config.py  test_llm_provider.py  test_prompt_registry.py  test_retry_api.py  test_task_models.py  test_tool_workflow.py  test_tools.py  test_workflow_checkpoint.py  test_workflow_graph.py  test_workflow_recovery.py
docker/: Dockerfile
(+2 files in other folders)
